styles.css
body {
  background-color: transparent;
  box-sizing: border-box;
  font-family: 'Prata', serif;
}

.menu-container{
  display: flex;
  width: 100%;
  justify-content: space-around;
}
.navbar{
  text-align: center;
  margin:20px;
  width:100%
}

nav ul{
  margin: 0;
  padding:0;
  list-style:none;
  display:flex;
  justify-content: space-evenly;
}

nav li{
  padding:20px 40px;

}

a, .dropbtn{
  color:#A188A6;
  text-decoration:none;
  letter-spacing:1px;
  position:relative;
  font-family: 'Tenor Sans', sans-serif;
  font-size: 20px;
  border: none;
}



a:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0%;
  border-bottom: 1px solid #000;
  transition: 0.4s;
}

a:hover:after {
  width: 100%;
}


.bg-image{
  width:100%;
  max-width: 1200px;
  position:relative;
  margin:50px auto;
  
}

.bg-image img{
    display: block;
    width: 100%;
    height: auto;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: rgba(62, 53, 53, 0.618);
}

.bg-image:hover .overlay {
  opacity: 1;
}

.text {
  color: white;
  font-size: 35px;
  position: absolute;
  top: 50%;
  left: 50%;

  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

footer{
  text-transform: capitalize;
  text-align:center;
  margin:20px;

}

.contact-links{
  margin-bottom:20px;
}
.contact-links a{
  margin:0 20px;
}

.logo{
  font-size:40px;
  text-align:center;
  font-weight:bold;
  text-transform: uppercase;
  padding:20px;
}

hr.solid {
  border-top: 1px solid #333;
  width:90%;
  margin: 20px auto;
}

.title{
  font-family: 'Tenor Sans', sans-serif;
}


/* The container <div> - needed to position the dropdown content */
.dropdown {
  position: relative;
  display: block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #fff;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #A188A6; }

.dropdown-content a:after {border-bottom: unset; }


/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {display: block;}

/* Change the background color of the dropdown button when the dropdown content is shown */
.dropdown:hover .dropbtn {background-color: #fff;}

